[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/a font.tres" type="FontFile" id=2]

[sub_resource type="Gradient" id=1]
offsets = PackedFloat32Array( 0, 0.109244, 0.890756 )
colors = PackedColorArray( 0.710938, 0.361023, 0.623459, 1, 0.964844, 0.0452271, 0.0452271, 1, 0.835938, 0.516849, 0.0653076, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "Gradient"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture:gradient:offsets")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.8, 1.9, 3 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ PackedFloat32Array( 0, 0.109244, 0.890756 ), PackedFloat32Array( 0, 0.5, 0.1 ), PackedFloat32Array( 0, 0.304622, 0.890756 ), PackedFloat32Array( 0, 0.109244, 0.890756 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture:gradient:colors")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 1.5, 3 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ PackedColorArray( 0.710938, 0.361023, 0.623459, 1, 0.964844, 0.0452271, 0.0452271, 1, 0.835938, 0.516849, 0.0653076, 1 ), PackedColorArray( 1, 0, 0, 1, 0.172549, 0, 1, 1, 0.0666667, 0.835294, 0.454902, 1 ), PackedColorArray( 0.710938, 0.361023, 0.623459, 1, 0.964844, 0.0452271, 0.0452271, 1, 0.835938, 0.516849, 0.0653076, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture:gradient:offsets")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ PackedFloat32Array( 0, 0.109244, 0.890756 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture:gradient:colors")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ PackedColorArray( 0.710938, 0.361023, 0.623459, 1, 0.964844, 0.0452271, 0.0452271, 1, 0.835938, 0.516849, 0.0653076, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource( 2 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
autoplay = "Gradient"
anims/Gradient = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="NewGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = 301.188
offset_top = 440.407
offset_right = 520.188
offset_bottom = 530.407
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 5 )
text = "New"

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1608.57
offset_top = 847.24
offset_right = 1827.57
offset_bottom = 937.24
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 5 )
text = "Quit"

[node name="LoadButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = 697.427
offset_top = 550.591
offset_right = 916.427
offset_bottom = 640.591
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 5 )
text = "Load"

[node name="FileDialog" type="FileDialog" parent="LoadButton"]
offset_left = -612.0
offset_top = -462.0
offset_right = 1132.0
offset_bottom = 501.0
window_title = "Open a File"
mode = 0

[node name="NewGameOptions" type="Control" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="QuickMatchButton" type="Button" parent="NewGameOptions"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = 500.486
offset_top = 439.526
offset_right = 795.486
offset_bottom = 529.526
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 5 )
text = "Quick Match"

[node name="CustomMatchButton" type="Button" parent="NewGameOptions"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = 895.725
offset_top = 550.71
offset_right = 1237.73
offset_bottom = 640.71
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 5 )
text = "Custom Match"

[node name="CareerButton" type="Button" parent="NewGameOptions"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1513.21
offset_top = 669.251
offset_right = 1808.21
offset_bottom = 759.251
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 5 )
text = "Career"

[node name="HomeButton" type="Button" parent="NewGameOptions"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1588.57
offset_top = 847.24
offset_right = 1807.57
offset_bottom = 937.24
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 5 )
text = "Back"

[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="file_selected" from="LoadButton/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="NewGameOptions/QuickMatchButton" to="." method="_on_QuickMatchButton_pressed"]
[connection signal="pressed" from="NewGameOptions/CustomMatchButton" to="." method="_on_CustomMatchButton_pressed"]
[connection signal="pressed" from="NewGameOptions/CareerButton" to="." method="_on_CareerButton_pressed"]
[connection signal="pressed" from="NewGameOptions/HomeButton" to="." method="_on_HomeButton_pressed"]
